[package]
name = "flv-tls-proxy"
version = "0.7.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Simple Local TLS Proxy"
repository = "https://github.com/infinyon/flv-tls-proxy"
license = "Apache-2.0"
categories = ["encoding"]

[dependencies]
log = "0.4.8"
cfg-if = "1.0.0"
futures-lite = { version = "1.7.0" }
pin-project-lite = "0.2.0"
futures-util = { version = "0.3.5", features = ["sink", "io"] }
x509-parser = "0.14.0"
serde = "1.0.117"
serde_json = "1.0.59"
async-trait = "0.1.41"
event-listener = "2.5.1"
tokio = { version = "1.3.0", features = ["macros"] }
fluvio-future = { version = "0.5.0", features = ["net", "openssl_tls", "task"] }


[dev-dependencies]
bytes = "1.0.0"
flv-util = { version = "0.5.0", features = ["fixture"] }
fluvio-future = { version = "0.4.0", features = ["fixture", "timer"] }