[package]
name = "flv-tls-proxy"
version = "0.10.0"
edition = "2024"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Simple Local TLS Proxy"
repository = "https://github.com/infinyon/flv-tls-proxy"
license = "Apache-2.0"
resolver = "3"
categories = ["encoding"]

[features]
default = ["openssl_tls"]
openssl_tls = ["fluvio-future/openssl_tls"]
rust_tls = ["fluvio-future/rust_tls"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.41"
cfg-if = "1.0.0"
event-listener = "5.3.1"
futures-lite = { version = "2.3.0" }
futures-util = { version = "0.3.5", features = ["sink", "io"] }
pin-project-lite = "0.2.0"
serde = "1.0.117"
serde_json = "1.0.59"

tokio = { version = "1.3.0", features = ["macros"] }
tracing = "0.1.19"
x509-parser = "0.17.0"

fluvio-future = { version = "0.8.0", features = ["net", "task"] }

[dev-dependencies]
bytes = "1.0.0"
flv-util = { version = "0.5.0", features = ["fixture"] }
fluvio-future = { version = "0.8.0", features = ["fixture", "timer"] }